--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-opencv-python-headless==4.7.0.72
-ultralytics
-numpy
+streamlit>=1.22.0
+numpy>=1.20.0
+pandas>=1.3.0
+opencv-python-headless>=4.6.0
+ultralytics>=8.0.0
